// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flatten-tests > flattened media queries 1`] = `
"
      import { YStack } from 'tamagui'
      import { useMedia } from 'tamagui'

      export function Test(isLoading) {
        const media = useMedia()

        return (
          <YStack
            y={10}
            x={20}
            rotate="10deg"
            {...media.sm && {
              scale: 2,
              borderRadius: 10,
              backgroundColor: isLoading ? 'red' : 'blue'
            }}
          />
        )
      }
"
`;

exports[`flatten-tests > work with experimentalFlattenThemesOnNative + ternary 1`] = `
"
      import { View } from 'tamagui'

      export function Test() {
        return (
          <View backgroundColor={showBackground ? '$color1' : '$color2'} />
        )
      }
"
`;

exports[`flatten-tests > work with experimentalFlattenThemesOnNative 1`] = `
"
      import { YStack } from 'tamagui'

      export function Test(isLoading) {
        return (
          <YStack
            y={10}
            x={20}
            rotate="10deg"
            backgroundColor="$background"
          />
        )
      }
"
`;
